force-app/main/default/objects/Engineers__c/Engineers__c.object-meta.xml
<CustomObject>
    <description>For NCR Partner Channel - Partner Portal.  Will track all partner engineers and registrations.</description>
    <label>Engineer</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Engineers</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engineers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>