force-app/main/default/objects/Engineers__c/fields/Active_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Active_Engineer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Engineer</label>
    <type>Checkbox</type>
</CustomField>