force-app/main/default/objects/Engineers__c/fields/Advanced_Back_Office_ABO__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Back_Office_ABO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced Back Office (ABO)</label>
    <type>Checkbox</type>
</CustomField>