force-app/main/default/objects/Engineers__c/fields/Advanced_Retail_Solution_ARS__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Retail_Solution_ARS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced Retail Solution (ARS)</label>
    <type>Checkbox</type>
</CustomField>