force-app/main/default/objects/Engineers__c/fields/Certification_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Certification_Deadline__c</fullName>
    <defaultValue>Today() + 90</defaultValue>
    <label>Certification Deadline</label>
    <type>Date</type>
</CustomField>