force-app/main/default/objects/Engineers__c/fields/Certified__c.field-meta.xml
<CustomField>
    <fullName>Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Populated by NCR Admin.  Indicates engineer has completed requirements to receive physical media.</inlineHelpText>
    <label>Certified</label>
    <type>Checkbox</type>
</CustomField>