force-app/main/default/objects/Engineers__c/fields/Diagnostics_Approved__c.field-meta.xml
<CustomField>
    <fullName>Diagnostics_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diagnostics Approved</label>
    <type>Checkbox</type>
</CustomField>