force-app/main/default/objects/Engineers__c/fields/Diagnostics_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Diagnostics_Request_Status__c</fullName>
    <description>Holds status for Diagnostics Request.</description>
    <label>Diagnostics Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>