force-app/main/default/objects/Engineers__c/fields/In_Breach__c.field-meta.xml
<CustomField>
    <fullName>In_Breach__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will be checked if today&apos;s date is greater than Certification Deadline.</inlineHelpText>
    <label>In Breach</label>
    <type>Checkbox</type>
</CustomField>