force-app/main/default/objects/Engineers__c/fields/Inetco__c.field-meta.xml
<CustomField>
    <fullName>Inetco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inetco</label>
    <type>Checkbox</type>
</CustomField>