force-app/main/default/objects/Engineers__c/fields/ISS45_Retail__c.field-meta.xml
<CustomField>
    <fullName>ISS45_Retail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISS45</label>
    <type>Checkbox</type>
</CustomField>