force-app/main/default/objects/Engineers__c/fields/Key_Disk__c.field-meta.xml
<CustomField>
    <fullName>Key_Disk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Disk</label>
    <type>Checkbox</type>
</CustomField>