force-app/main/default/objects/Engineers__c/fields/LaneHawk__c.field-meta.xml
<CustomField>
    <fullName>LaneHawk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LaneHawk</label>
    <type>Checkbox</type>
</CustomField>