force-app/main/default/objects/Engineers__c/fields/Loyalty_Pro__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loyalty Pro</label>
    <type>Checkbox</type>
</CustomField>