force-app/main/default/objects/Engineers__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Account Name that you are employed by</inlineHelpText>
    <label>Partner Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 AND 3)</booleanFilter>
        <filterItems>
            <field>Account.Partner_Type__c</field>
            <operation>equals</operation>
            <value>Dealer, Deployer, Distributor, Master VAR, Solution Provider</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Enterprise</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engineers</relationshipLabel>
    <relationshipName>Engineers</relationshipName>
    <trackHistory>false</trueHistory>
    <type>Lookup</type>
</CustomField>