force-app/main/default/objects/Engineers__c/fields/Payment_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Payment_Solutions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Solutions</label>
    <type>Checkbox</type>
</CustomField>