force-app/main/default/objects/Engineers__c/fields/Point_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Point of Sale</label>
    <type>Checkbox</type>
</CustomField>