force-app/main/default/objects/Engineers__c/fields/Portal_Approved__c.field-meta.xml
<CustomField>
    <fullName>Portal_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Approved</label>
    <type>Checkbox</type>
</CustomField>