force-app/main/default/objects/Engineers__c/fields/Provisioning_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_User_Email__c</fullName>
    <description>Holds the email address of Partner Region for the new engineer.</description>
    <label>Provisioning User Email</label>
    <type>Email</type>
</CustomField>