force-app/main/default/objects/Engineers__c/fields/Rejection_Reason_of_Diagnostic_Request__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_of_Diagnostic_Request__c</fullName>
    <description>Contains the other reason of rejection of Diagnostic Request.</description>
    <label>Rejection Reason of Diagnostic Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>