force-app/main/default/objects/Engineers__c/fields/Rejection_Reason_of_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_of_Portal_Access__c</fullName>
    <label>Rejection Reason of Portal Access</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>