force-app/main/default/objects/Engineers__c/fields/Retail_Kiosks__c.field-meta.xml
<CustomField>
    <fullName>Retail_Kiosks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retail Kiosks</label>
    <type>Checkbox</type>
</CustomField>