force-app/main/default/objects/Engineers__c/fields/Retalix_Store_HQ__c.field-meta.xml
<CustomField>
    <fullName>Retalix_Store_HQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retalix Store/HQ</label>
    <type>Checkbox</type>
</CustomField>