force-app/main/default/objects/Engineers__c/fields/ScanMaster_RETAIL__c.field-meta.xml
<CustomField>
    <fullName>ScanMaster_RETAIL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ScanMaster</label>
    <type>Checkbox</type>
</CustomField>