force-app/main/default/objects/Engineers__c/fields/Self_Serv_ATM__c.field-meta.xml
<CustomField>
    <fullName>Self_Serv_ATM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Serv ATM</label>
    <type>Checkbox</type>
</CustomField>