force-app/main/default/objects/Engineers__c/fields/Service_Center_USB_Key_7408__c.field-meta.xml
<CustomField>
    <fullName>Service_Center_USB_Key_7408__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Center Kiosk USB Key 7408</label>
    <type>Checkbox</type>
</CustomField>