force-app/main/default/objects/Engineers__c/fields/Solidcore_Retail__c.field-meta.xml
<CustomField>
    <fullName>Solidcore_Retail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solidcore</label>
    <type>Checkbox</type>
</CustomField>