force-app/main/default/objects/Engineers__c/fields/Type_of_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Portal_Access__c</fullName>
    <label>Request for</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diagnostics</fullName>
            </value>
            <value>
                <fullName>Portal Access</fullName>
                <default>true</default>
                <label>Portal Access</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>