force-app/main/default/objects/Engineers__c/fields/Web_Portal_login_ID__c.field-meta.xml
<CustomField>
    <fullName>Web_Portal_login_ID__c</fullName>
    <description>NCR Assigned &amp; editable</description>
    <label>Web Portal login ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>